feat: ajusta geração de documentação
